// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemList /> should match snapshot 1`] = `
<div>
  <div
    className="heading"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="menubar"
  >
    <span>
      Hello World
    </span>
    <Badge
      count={3}
    />
  </div>
  <div
    className="abt-items"
    id="cited"
    onWheel={[Function]}
    style={
      Object {
        "maxHeight": "400px",
        "overflowX": "hidden",
        "overflowY": "auto",
        "transition": ".2s",
      }
    }
  >
    <Item
      CSL={
        Object {
          "id": "1",
          "title": "Test item 1",
          "type": "article-journal",
        }
      }
      id="1"
      index={1}
      indexOnHover={true}
      isSelected={false}
      key="1"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
    <Item
      CSL={
        Object {
          "id": "2",
          "title": "Test item 2",
          "type": "article-journal",
        }
      }
      id="2"
      index={2}
      indexOnHover={true}
      isSelected={false}
      key="2"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
    <Item
      CSL={
        Object {
          "id": "3",
          "title": "Test item 3",
          "type": "article-journal",
        }
      }
      id="3"
      index={3}
      indexOnHover={true}
      isSelected={false}
      key="3"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
  </div>
</div>
`;

exports[`<ItemList /> should match snapshot 2`] = `
<div>
  <div
    className="heading"
    onClick={[Function]}
    onDoubleClick={[Function]}
    role="menubar"
  >
    <span>
      Hello World
    </span>
    <Badge
      count={3}
    />
  </div>
  <div
    className="abt-items"
    id="cited"
    onWheel={[Function]}
    style={
      Object {
        "maxHeight": "400px",
        "overflowX": "hidden",
        "overflowY": "auto",
        "transition": ".2s",
      }
    }
  >
    <Item
      CSL={
        Object {
          "id": "1",
          "title": "Test item 1",
          "type": "article-journal",
        }
      }
      id="1"
      index={1}
      indexOnHover={true}
      isSelected={true}
      key="1"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
    <Item
      CSL={
        Object {
          "id": "2",
          "title": "Test item 2",
          "type": "article-journal",
        }
      }
      id="2"
      index={2}
      indexOnHover={true}
      isSelected={false}
      key="2"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
    <Item
      CSL={
        Object {
          "id": "3",
          "title": "Test item 3",
          "type": "article-journal",
        }
      }
      id="3"
      index={3}
      indexOnHover={true}
      isSelected={false}
      key="3"
      onClick={[Function]}
      onDoubleClick={[Function]}
    />
  </div>
</div>
`;
